# meshup

./: .clang-format  CMakeLists.txt
.github/workflows/: ci-linux.yaml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/geom/: CMakeLists.txt
lib/geom/include/meshup/geom/: TriangleMesh.h  Vertex.h
lib/geom/src/meshup/geom/: TriangleMesh.cpp
lib/loader/: CMakeLists.txt
lib/loader/include/meshup/loader/: ObjLoader.h
lib/loader/src/meshup/loader/: ObjLoader.cpp
lib/loader/test/: CMakeLists.txt
lib/loader/test/src/: test_ObjLoader.cpp
lib/math/: CMakeLists.txt
lib/math/include/meshup/math/: vec3.h
lib/math/src/meshup/math/: vec3.cpp
lib/ogl/: CMakeLists.txt
lib/ogl/include/meshup/ogl/: Camera.h  Model.h  Shader.h
lib/ogl/src/meshup/ogl/: Camera.cpp  Model.cpp  Shader.cpp
lib/ogl/test/: CMakeLists.txt
lib/ogl/test/src/: test_Camera.cpp
